--- a/css/header.css
+++ b/css/header.css
@@ -132,7 +132,6 @@
 .containt {
     display: none;
     background-color: black;
-    z-index: 22;
 }
 
 .containt a {
@@ -321,3 +320,21 @@
     font-weight: 200;
     margin-left: 5px;
 }
+/* SUBMENU TRONG MENUMOBILE ============================================================================= */
+
+.submenu{
+    align-items: center;
+}
+.noidung222{
+   display: none;
+   padding-left: 10px;
+   background-color: #111;
+}
+
+.noidung222 a{
+    background-color: #111;
+}
+.noidung222 a:hover{
+    color: goldenrod;
+}
+ /* ===================================== */
