--- a/css/tu.css
+++ b/css/tu.css
@@ -1,4 +1,5 @@
 .container__service{
+    min-height: calc(100vh - 68px);
     margin-top: 22px;
     background: linear-gradient(#212121d1, #212121d1),
     url("https://img4.thuthuatphanmem.vn/uploads/2021/01/07/background-phong-tap-gym_035832535.jpg");
@@ -57,8 +58,8 @@
 
 .container__service__img__items{
     display: inline-block;
-    max-width: 45vw;
-    padding: 12px 12px;
+    /* max-width: 178px; */
+    padding: 12px 6px 4px;
     margin-left: 4px;
     margin-right: 4px;
     margin-bottom: 50px;
@@ -68,10 +69,10 @@
     background-color: #d5d5d5;
     box-shadow: 8px 6px 18px 2px rgba(160, 160, 160, 0.3);
     box-sizing: border-box;
-    min-height: 305px;
+    /* min-height: 305px; */
 }
 .container__service__img__items img{
-    max-width: 212px;
+    max-width: 200px;
     width: 100%;
     min-width: 120px;
     border: 2px solid #888888;
@@ -83,4 +84,16 @@
     max-width: 212px;
     color: black;
     margin-top: 10px;
+}
+
+
+@media screen and (max-width: 420px) {
+    .container__service__img__items{
+        max-width: 178px;
+    }
+    .container__service__img__items img{
+        max-width: 192px;
+        width: 100%;
+        
+    }
 }
