--- a/css/tu.css
+++ b/css/tu.css
@@ -49,7 +49,11 @@
     margin-bottom: 50px;
     flex-wrap: wrap;
     /* text-align: center; */
+
  }
+
+
+
 
  
  .service__img_row-2:last-child{
@@ -77,7 +81,7 @@
     min-width: 120px;
     border: 2px solid #888888;
     border-radius: 2px;
-    
+    opacity: 1;
 }
 .container__service__img__items p{
     font-size: 1.6rem;
@@ -85,6 +89,8 @@
     color: black;
     margin-top: 10px;
 }
+
+
 
 
 @media screen and (max-width: 420px) {
