--- a/css/tien.css
+++ b/css/tien.css
@@ -1,41 +1,69 @@
-
-
 /* lê văn tiến */
 .feedback {
     margin-top: 40px;
     text-align: center;
 }
+
 .container__shop {
     background-color: rgb(13, 13, 13);
     /* không cần cũng đc */
     /* width: 100%;
     height: 1100px; */
 }
+
 .container__images {
     margin-top: 40px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: 20px;
+    /* padding: 20px; */
 }
 
 .image__item {
-    flex-basis: calc(50% - 20px); /* Chiếm 50% chiều rộng của container trừ đi khoảng cách */
+    flex-basis: calc(50% - 20px);
+    /* Chiếm 50% chiều rộng của container trừ đi khoảng cách */
     margin-bottom: 20px;
-    text-align: center; /* Căn giữa ảnh và chữ */
+    text-align: center;
+    position: relative;
+    overflow: hidden;
+    z-index: 4;
+    border-radius: 4px;
+    border: 2px solid #b1b1b1;
 }
 
 .image__item img {
-    width: 100%; /* Chiều rộng tối đa trong container của mình */
-    border: 2px solid #b1b1b1;
-    border-radius: 4px;
+    min-width: 360px;
+    height: 100%;
+    width: 100%;
+    /* Chiều rộng tối đa trong container của mình */
+    -webkit-filter: grayscale(100%);
+    /* Safari 6.0 - 9.0 */
+    filter: grayscale(80%);
+    transition: all 0.5s;
+}
+
+.image__item h2 {
+    position: absolute;
+    bottom: 0px;
+    width: 85%;
+    text-align: start;
+    padding: 10px 6px 6px;
+    background-color: #ff0436;
+    border-top-right-radius: 12px;
+}
+
+.image__item:hover img{
+    filter: grayscale(0%);
+    transform: scale(1.1); /* Phóng to hình ảnh lên 120% */
+    transition: transform 0.5s ease-in-out; /* Thêm hiệu ứng chuyển đổi mượt mà */
 }
 
 .container__story {
     text-align: center;
     background-color: rgb(14, 14, 14);
 }
-.container__story h1{
+
+.container__story h1 {
     font-size: 2.4rem;
     margin: 0;
     line-height: 2.8rem;
@@ -55,20 +83,23 @@
     display: flex;
     /* justify-content: space-between;
     align-content: flex-start; */
-    padding: 0 40px; /* Thêm padding 40px vào hai bên */
-    box-sizing: border-box; /* Đảm bảo padding không làm tăng kích thước tổng thể */
+    padding: 0 40px;
+    /* Thêm padding 40px vào hai bên */
+    box-sizing: border-box;
+    /* Đảm bảo padding không làm tăng kích thước tổng thể */
 }
 
 .change__weightcalculation {
     display: flex;
     flex-direction: column;
     margin: 12px 42px;
-    flex-basis: calc(50% - 20px); /* Chiếm 50% chiều rộng của container trừ đi khoảng cách giữa các phần tử */
+    flex-basis: calc(50% - 20px);
+    /* Chiếm 50% chiều rộng của container trừ đi khoảng cách giữa các phần tử */
     text-align: left;
 }
 
 
-.change__box{
+.change__box {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -81,7 +112,7 @@
     flex-direction: row-reverse;
 }
 
-.change__box__text{
+.change__box__text {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -90,31 +121,33 @@
     min-width: 300px;
 }
 
-.change__box__text h2{
+.change__box__text h2 {
     font-size: 2.4rem;
     line-height: 24px;
     margin-bottom: 6px;
 }
-.change__box__text p{
+
+.change__box__text p {
     font-size: 1.4rem;
     font-weight: 600;
     line-height: 18px;
     margin-left: 4px;
 }
 
-.change__box__img{
+.change__box__img {
     display: flex;
     align-items: flex-start;
     justify-content: center;
     flex: 3;
 }
 
-.change__box__img img{
+.change__box__img img {
     min-width: 350px;
     max-width: 680px;
     width: 100%;
     height: auto;
-    object-fit: scale-down; /* Đảm bảo ảnh không vượt quá kích thước của phần tử cha */
+    object-fit: scale-down;
+    /* Đảm bảo ảnh không vượt quá kích thước của phần tử cha */
     border: 2px solid #000;
     box-shadow: 10px 10px 5px #21212117;
     border-radius: 5px;
@@ -123,31 +156,39 @@
 .bmi__form {
     display: flex;
     flex-direction: column;
-    width: 300px; /* Bạn có thể điều chỉnh chiều rộng theo ý muốn */
+    width: 300px;
+    /* Bạn có thể điều chỉnh chiều rộng theo ý muốn */
     margin: auto;
 }
 
 .bmi__form input,
 .bmi__form select,
 .bmi__form button {
-    margin-bottom: 10px; /* Khoảng cách giữa các trường */
-    padding: 10px; /* Đệm cho các trường nhập liệu */
-    border: 1px solid #171616; /* Viền cho các trường nhập liệu */
+    margin-bottom: 10px;
+    /* Khoảng cách giữa các trường */
+    padding: 10px;
+    /* Đệm cho các trường nhập liệu */
+    border: 1px solid #171616;
+    /* Viền cho các trường nhập liệu */
 }
+
 .bmi__form button {
-    background-color: blueviolet; /* Màu nền cho nút */
-    border: none; /* Loại bỏ viền cho nút */
-    cursor: pointer; /* Con trỏ chuột khi di chuyển vào nút */
+    background-color: blueviolet;
+    /* Màu nền cho nút */
+    border: none;
+    /* Loại bỏ viền cho nút */
+    cursor: pointer;
+    /* Con trỏ chuột khi di chuyển vào nút */
 }
 
 /* change__input */
-.change__weightcalculation{
+.change__weightcalculation {
     position: relative;
     padding: 20px 20px;
 }
 
 
-.change__input{
+.change__input {
     display: flex;
     flex-wrap: wrap;
     padding-right: 50px;
@@ -164,11 +205,11 @@
     bottom: 0;
     right: 0;
     z-index: 0;
-    clip-path: polygon(0 0,100% 0,90% 100%,0% 100%);
+    clip-path: polygon(0 0, 100% 0, 90% 100%, 0% 100%);
 }
 
 .change__input input,
-.change__input select{
+.change__input select {
     width: 180px;
     font-weight: 600;
     font-size: 1.8rem;
@@ -182,7 +223,7 @@
     z-index: 3;
 }
 
-.change__submit{
+.change__submit {
     position: relative;
     font-size: 1.6rem;
     width: 180px;
@@ -198,7 +239,7 @@
     z-index: 4;
 }
 
-.change__input__error{
+.change__input__error {
     color: #ff738f;
     z-index: 2;
     font-size: 1.6em;
@@ -206,6 +247,7 @@
     margin-top: 8px;
     min-height: 8px;
 }
+
 /* PHẦN SẢN PHẨM */
 .container__sanpham {
     /* margin: 50px ; */
@@ -215,20 +257,31 @@
 /* Định kiểu cho container chứa sản phẩm */
 .container__danhmucsanpham {
     position: relative;
-    display: inline-block; /* Hiển thị các container cạnh nhau theo chiều ngang */
-    margin: 10px; /* Tạo khoảng cách xung quanh container */
-    border: 3px solid #f3f0f0; /* Tạo viền xung quanh container */
-    padding: 10px; /* Tạo khoảng cách giữa viền và nội dung bên trong */
-    text-align: center; /* Căn giữa nội dung bên trong container */
-    vertical-align: top; /* Căn đỉnh các container khi hiển thị cạnh nhau */
-    width: 250px; /* Chiều rộng cố định cho container */
-    height: 350px; /* Chiều cao cố định cho container */
-    box-sizing: border-box; /* Đảm bảo padding và border không làm tăng kích thước tổng thể */
+    display: inline-block;
+    /* Hiển thị các container cạnh nhau theo chiều ngang */
+    margin: 10px;
+    /* Tạo khoảng cách xung quanh container */
+    border: 3px solid #f3f0f0;
+    /* Tạo viền xung quanh container */
+    padding: 10px;
+    /* Tạo khoảng cách giữa viền và nội dung bên trong */
+    text-align: center;
+    /* Căn giữa nội dung bên trong container */
+    vertical-align: top;
+    /* Căn đỉnh các container khi hiển thị cạnh nhau */
+    width: 250px;
+    /* Chiều rộng cố định cho container */
+    height: 350px;
+    /* Chiều cao cố định cho container */
+    box-sizing: border-box;
+    /* Đảm bảo padding và border không làm tăng kích thước tổng thể */
 }
-.info-top-left, .info-top-right {
+
+.info-top-left,
+.info-top-right {
     position: absolute;
     bottom: 10px;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0, 0, 0, 0.5);
     color: white;
     padding: 5px;
 }
@@ -244,20 +297,30 @@
 
 /* Định kiểu cho ảnh sản phẩm */
 .container__danhmucsanpham img {
-    width: 100%; /* Chiều rộng của ảnh bằng 100% chiều rộng của container */
-    height: 200px; /* Chiều cao cố định của ảnh */
-    object-fit: cover; /* Đảm bảo ảnh phủ đầy khung hình mà không làm thay đổi tỷ lệ của nó */
-    border: 1px solid #000; /* Tạo viền xung quanh ảnh */
-    display: block; /* Hiển thị ảnh dưới dạng khối */
-    margin: 0 auto 10px; /* Tạo khoảng cách dưới ảnh */
-    transition: transform 0.3s ease; /* Tạo hiệu ứng chuyển đổi khi thay đổi kích thước ảnh */
+    width: 100%;
+    /* Chiều rộng của ảnh bằng 100% chiều rộng của container */
+    height: 200px;
+    /* Chiều cao cố định của ảnh */
+    object-fit: cover;
+    /* Đảm bảo ảnh phủ đầy khung hình mà không làm thay đổi tỷ lệ của nó */
+    border: 1px solid #000;
+    /* Tạo viền xung quanh ảnh */
+    display: block;
+    /* Hiển thị ảnh dưới dạng khối */
+    margin: 0 auto 10px;
+    /* Tạo khoảng cách dưới ảnh */
+    transition: transform 0.3s ease;
+    /* Tạo hiệu ứng chuyển đổi khi thay đổi kích thước ảnh */
 }
 
 /* Hiệu ứng khi di chuột vào ảnh */
 .container__danhmucsanpham img:hover {
-    transform: scale(1.05); /* Phóng to ảnh khi di chuột vào */
-    cursor: pointer; /* Thay đổi con trỏ chuột thành hình dạng nút nhấn */
-    border-color: goldenrod; /* Thay đổi màu viền của ảnh */
+    transform: scale(1.05);
+    /* Phóng to ảnh khi di chuột vào */
+    cursor: pointer;
+    /* Thay đổi con trỏ chuột thành hình dạng nút nhấn */
+    border-color: goldenrod;
+    /* Thay đổi màu viền của ảnh */
 }
 
 .container__danhmucsanpham__tadon {
@@ -272,8 +335,28 @@
 
 /* Định kiểu cho phần tử cha chứa các container sản phẩm */
 .parent__container {
-    text-align: center; /* Căn giữa nội dung bên trong phần tử cha */
-    height: 100%; /* Chiều cao tự động điều chỉnh theo kích thước trình duyệt */
-    width: 100%; /* Chiều rộng phần tử cha chiếm toàn bộ chiều rộng của phần tử chứa nó */
-    background-color: rgb(20, 20, 20); /* Màu nền cho phần tử cha */
+    text-align: center;
+    /* Căn giữa nội dung bên trong phần tử cha */
+    height: 100%;
+    /* Chiều cao tự động điều chỉnh theo kích thước trình duyệt */
+    width: 100%;
+    /* Chiều rộng phần tử cha chiếm toàn bộ chiều rộng của phần tử chứa nó */
+    background-color: rgb(20, 20, 20);
+    /* Màu nền cho phần tử cha */
+}
+
+@media screen and (max-width: 500px) {
+
+    .image__item {
+        flex-basis: calc(100% - 2px);
+    }
+
+    .image__item h2 {
+        width: 94%;
+    }
+    .image__item img {
+        -webkit-filter: grayscale(100%);
+        filter: grayscale(0%);
+        transition: all 0.5s;
+    }
 }
