--- a/css/tien.css
+++ b/css/tien.css
@@ -52,10 +52,12 @@
     border-top-right-radius: 12px;
 }
 
-.image__item:hover img{
+.image__item:hover img {
     filter: grayscale(0%);
-    transform: scale(1.1); /* Phóng to hình ảnh lên 120% */
-    transition: transform 0.5s ease-in-out; /* Thêm hiệu ứng chuyển đổi mượt mà */
+    transform: scale(1.1);
+    /* Phóng to hình ảnh lên 120% */
+    transition: transform 0.5s ease-in-out;
+    /* Thêm hiệu ứng chuyển đổi mượt mà */
 }
 
 .container__story {
@@ -354,9 +356,123 @@
     .image__item h2 {
         width: 94%;
     }
+
     .image__item img {
         -webkit-filter: grayscale(100%);
         filter: grayscale(0%);
         transition: all 0.5s;
+    }
+}
+
+
+/* slide show img change */
+
+
+.change__box__img img {
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.change__box__img img:hover {
+    opacity: 0.7;
+}
+
+/* The Modal (background) */
+.modal {
+    margin-top: 68px;
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 10;
+    /* Sit on top */
+    padding-top: 100px;
+    /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.9);
+    /* Black w/ opacity */
+}
+
+/* Modal Content (image) */
+.modal-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+}
+
+/* Caption of Modal Image */
+#caption {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+    text-align: center;
+    color: #ccc;
+    padding: 10px 0;
+    height: 150px;
+}
+
+/* Add Animation */
+.modal-content,
+#caption {
+    -webkit-animation-name: zoom;
+    -webkit-animation-duration: 0.6s;
+    animation-name: zoom;
+    animation-duration: 0.6s;
+}
+
+@-webkit-keyframes zoom {
+    from {
+        -webkit-transform: scale(0)
+    }
+
+    to {
+        -webkit-transform: scale(1)
+    }
+}
+
+@keyframes zoom {
+    from {
+        transform: scale(0)
+    }
+
+    to {
+        transform: scale(1)
+    }
+}
+
+/* The Close Button */
+.close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 700px) {
+    .modal-content {
+        width: 100%;
     }
 }
