--- a/css/header.css
+++ b/css/header.css
@@ -63,6 +63,10 @@
     align-items: center;
 }
 
+.header__inner__logo h1:hover {
+    color: goldenrod;
+}
+
 /* .header__inner__navigation a{
     color: hsl(0, 100%, 40%);
 } */
@@ -125,10 +129,83 @@
     color: black;
 }
 
-.header__inner__logo h1:hover {
-    color: goldenrod;
+.header__inner__login{
+    position: relative;
+    height: 67px;
+    width: 67px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 10px;
+    /* background-color: rgb(127, 0, 212); */
 }
 
+.header__inner__login ul{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 47px;
+    width: 47px;
+    background-color: goldenrod;
+    border-radius: 100%;
+}
+.submenu__login{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 43px;
+    width: 43px;
+    background-color: rgb(0, 0, 0);
+    border-radius: 100%;
+}
+.account{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 39px;
+    width: 39px;
+    border-radius: 100%;
+    /* background-color: green; */
+    background-image: url(../img/icon/avatar__ico.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+    /* bottom: 0.1041665px; */
+}
+.account:hover{
+    opacity: 0.8;
+}
+.status__account{
+    display: none;
+    align-items: flex-start;
+    flex-direction: column;
+    width: 130px;
+    /* height: 68px; */
+    background-color: #dadada;
+    position: absolute;
+    top: 100%;
+    right: -10px;
+}
+.status{
+    display: flex;
+    align-items: center;
+    padding-left: 10px;
+    height: 30px;
+    width: 130px;
+    font-family: montserrat;
+    font-size: 12px;
+    font-weight: 600;
+    color: black;
+    border-top: 0.1px whitesmoke solid;
+}
+.status:hover{
+    background-color: whitesmoke;
+    /* border-radius: 5px; */
+}
+.submenu__login:focus-within .status__account{
+    display: flex;
+    
+}
 .containt {
     display: none;
     background-color: black;
@@ -180,7 +257,9 @@
     .header__inner__try {
         display: none;
     }
-
+    .header__inner__login{
+        display: none;
+    }
     .header__inner__menu {
         display: flex;
     }
@@ -275,7 +354,7 @@
     top: 2px;
 }
 
-.content a {
+.content__inner {
     position: relative;
     display: flex;
     align-items: center;
@@ -295,30 +374,66 @@
     font-size: 26px;
 }
 
-.content a:hover {
+.content__inner:hover {
     background-color: #222;
 }
 
 
 
-.logo a {
-    padding-left: 10px;
-    font-size: 32px;
-    font-family: montserrat;
-    font-weight: 900;
-    background-color: black;
-}
-
-.logo a:hover {
-    background-color: black;
-}
-
-.logo span {
+.logo {
+    height: 68px;
+    width: 300px;
     display: flex;
     align-items: center;
+    align-content: center;
+}
+.account__login__center{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 47px;
+    width: 47px;
+    background-color: goldenrod;
+    border-radius: 100%;
+    margin-left: 10px;
+}
+.account__login{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 43px;
+    width: 43px;
+    background-color: rgb(0, 0, 0);
+    border-radius: 100%;
+}
+.account__login__inner{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 39px;
+    width: 39px;
+    /* background-color: rgb(0, 110, 255); */
+    background-image: url(../img/icon/avatar__ico.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: 100%;
+}
+.account__login__inner:hover{
+    opacity: 0.8;
+}
+.account__name{
+    display: flex;
+    align-items: center;
+    padding-left: 10px;
+    height: 68px;
+    /* width: 130px; */
     font-family: montserrat;
-    font-weight: 200;
-    margin-left: 5px;
+    font-size: 16px;
+    font-weight: 600;
+    color: whitesmoke;
+}
+.account__name:hover{
+    opacity: 0.8;
 }
 /* SUBMENU TRONG MENUMOBILE ============================================================================= */
 
