--- a/navigation_css/card.css
+++ b/navigation_css/card.css
@@ -1,21 +1,24 @@
-.container{
-    background-color: #e0e0e0;
-    width: 100%;
-    height: auto;
-    /* font-family: Montserrat ,'Times New Roman', Times, serif; */
-    font-size: 16px;
-    margin-bottom: 30px;
-    color: #292727;
+.container {
+  background-color: #e0e0e0;
+  width: 100%;
+  height: auto;
+  /* font-family: Montserrat ,'Times New Roman', Times, serif; */
+  font-size: 16px;
+  margin-bottom: 30px;
+  color: #292727;
 
 }
-.container--feature{
-    margin-top: 30px;
-    display: flex;
-    flex-wrap: wrap; /*xuống dòng khi màn hình thu nhỏ*/
-    justify-content: space-around;
+
+.container--feature {
+  margin-top: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  /*xuống dòng khi màn hình thu nhỏ*/
+  justify-content: space-around;
 
 }
-.container-card{
+
+.container-card {
   min-width: 190px;
   min-height: 254px;
   flex: 1 0 200px;
@@ -23,70 +26,74 @@
   border-radius: 30px;
   background: #e0e0e0;
   box-shadow: 15px 15px 30px #bebebe,
-             -15px -15px 30px #ffffff;
+    -15px -15px 30px #ffffff;
   flex-basis: 30%;
-  
+
 }
 
 .button-icon {
-    display: flex;
-    margin: auto;
-    border: 3px #fff solid;
-    width: fit-content;
-    height: fit-content;
-    cursor: pointer;
-  }
-  
-  .cube {
-    transition: all 0.4s;
-    transform-style: preserve-3d;
-    width: 200px;
-    height: 20px;
-  }
-  
-  .button-icon:hover {
-    border-color: #ff98a2;
-  }
-  
-  .button-icon:hover .cube {
-    transform: rotateX(90deg);
-  }
-  
-  .side {
-    position: absolute;
-    height: 47px;
-    width: 200px;
-    display: flex;
-    font-size: 0.8em;
-    justify-content: center;
-    align-items: center;
-    text-transform: uppercase;
-    letter-spacing: 0.5px;
-    font-weight: bold;
-  }
-  
-  .top {
-    background: #ff98a2;
-    color: #fff;
-    transform: rotateX(-90deg) translate3d(0, 13.5px, 2em);
-  }
-  
-  .front {
-    background: #222229;
-    color: #fff;
-    transform: translate3d(0, 0, 1em);
-  }
-  .container-card--list{
-    text-align: center;
-    margin-top: 35px;
-  }
-  ul{
-    list-style-type: disc;
-  }
-  li {
-    display: list-item;
-    text-align: -webkit-match-parent;
-    line-height: 40px; /*lay honnnnnn*/
+  display: flex;
+  margin: auto;
+  border: 3px #fff solid;
+  width: fit-content;
+  height: fit-content;
+  cursor: pointer;
+}
+
+.cube {
+  transition: all 0.4s;
+  transform-style: preserve-3d;
+  width: 200px;
+  height: 20px;
+}
+
+.button-icon:hover {
+  border-color: #ff98a2;
+}
+
+.button-icon:hover .cube {
+  transform: rotateX(90deg);
+}
+
+.side {
+  position: absolute;
+  height: 47px;
+  width: 200px;
+  display: flex;
+  font-size: 0.8em;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+  font-weight: bold;
+}
+
+.top {
+  background: #ff98a2;
+  color: #fff;
+  transform: rotateX(-90deg) translate3d(0, 13.5px, 2em);
+}
+
+.front {
+  background: #222229;
+  color: #fff;
+  transform: translate3d(0, 0, 1em);
+}
+
+.container-card--list {
+  text-align: center;
+  margin-top: 35px;
+}
+
+ul {
+  list-style-type: disc;
+}
+
+li {
+  display: list-item;
+  text-align: -webkit-match-parent;
+  line-height: 40px;
+  /*lay honnnnnn*/
 }
 
 .container-card_footer {
@@ -98,92 +105,119 @@
   font-size: 13px;
   margin-left: 5px;
 }
+
 .container-card_footer-bodypart {
   margin: 60px 30px 40px;
   max-width: 300px;
-  cursor: pointer; 
+  cursor: pointer;
   min-width: 27px;
   /* chữ trên cách chữ dưới 1.3 */
-  line-height: 1.3; 
+  line-height: 1.3;
 }
 
 .heading {
   margin-top: 10px;
   max-width: 400px;
-  
+
 }
-.icon{
+
+.icon {
   margin: 0 5px;
   align-content: center;
 }
-li:hover{
+
+li:hover {
   color: #5c5e5f;
 }
+
 /* ==================== MEDIA ==================== */
-@media screen and (max-width: 420px) {
+@media (max-width: 1000px) {
   .header__inner {
-      width: 100%;
-      max-width: 1000px;
+    width: 100%;
+    max-width: 1000px;
   }
 
   .header__inner__navigation {
-      display: none;
+    display: none;
   }
 
   .header__inner__try {
-      display: none;
+    display: none;
+  }
+
+  .header__inner__login {
+    display: none;
   }
 
   .header__inner__menu {
-      display: flex;
+    display: flex;
   }
+
+  .header__inner {
+    width: 100%;
+    max-width: 1000px;
+  }
+
 }
-img{
+
+img {
   width: 100%;
   height: auto;
 }
-.container--table{
+
+.container--table {
   margin-top: 50px 10%;
 }
+
 /* table, th, td {
   border: 1px solid rgb(117, 111, 111);
 } */
 tr:nth-child(odd) {
-  background-color: #f2f2f2; /* Màu nền cho các dòng lẻ */
+  background-color: #f2f2f2;
+  /* Màu nền cho các dòng lẻ */
 }
+
 table {
   width: 100%;
   margin: 30px auto;
   /* display: flex; */
   flex-direction: column;
-  border-collapse: collapse; /* Để các viền không bị trùng lặp */
+  border-collapse: collapse;
+  /* Để các viền không bị trùng lặp */
 }
 
-tr{
+tr {
   /* display: flex; */
   text-align: center;
   height: 120px;
 }
+
 td {
-  border-left: 1px solid rgb(194, 189, 189); /* Thêm viền trái cho mỗi ô */
-  border-right: 1px solid rgb(194, 189, 189); /* Thêm viền phải cho mỗi ô */
+  border-left: 1px solid rgb(194, 189, 189);
+  /* Thêm viền trái cho mỗi ô */
+  border-right: 1px solid rgb(194, 189, 189);
+  /* Thêm viền phải cho mỗi ô */
 }
 
 td:first-child {
   text-align: left;
   padding-left: 100px;
-  border-left: none; /* Loại bỏ viền trái của ô đầu tiên trong mỗi hàng */
+  border-left: none;
+  /* Loại bỏ viền trái của ô đầu tiên trong mỗi hàng */
 }
 
 td:last-child {
-  border-right: none; /* Loại bỏ viền phải của ô cuối cùng trong mỗi hàng */
+  border-right: none;
+  /* Loại bỏ viền phải của ô cuối cùng trong mỗi hàng */
 }
-.fa-duotone{
+
+.fa-duotone {
   align-content: center;
   width: 10px;
   height: 10px;
 }
-i{
+
+i {
   display: inline-block;
   /* width: 5px;
   height: 5px; */
