--- a/navigation_css/admin.css
+++ b/navigation_css/admin.css
@@ -2,6 +2,7 @@
     background-image: url(../img/background/Black\ and\ Red\ Simple\ Fitness\ Zoom\ Workout\ Background.png);
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
     min-height: calc(100vh - 68px);
 }
 
@@ -71,6 +72,25 @@
     flex: 12;
 }
 /* container__show__cart__head */
+
+.container__show__cart__add{
+    display: flex;
+    align-items: center;
+    margin-top: 12px;
+}
+.container__show__cart__add button{
+    margin-left: 12px;
+    height: 32px;
+    font-size: 14px;
+    padding: 0 6px;
+    background-color: #f88900;
+}
+.container__show__cart__add button:hover{
+    background-color: rgb(229, 127, 1);
+    cursor: pointer;
+}
+
+
 .container__show__cart__head{
     display: flex;
     align-items: center;
@@ -122,18 +142,38 @@
 table{
     border-collapse: collapse;
     width: 100%;
+    
+    table-layout: fixed;
 }
 
 tr{
     height: 32px;
 }
+th:nth-child(1){
+    width: 110px;
+}
+th:nth-child(8){
+    width: 100px;
+}
+th:nth-child(3){
+    width: 52px;
+}
 
 th{
     font-size: 18px;
     font-weight: 700;
+
 }
 td{ 
     font-size: 16px;
+}
+
+td i{
+    margin: 0 6px;
+    cursor: pointer;
+}
+td i:hover{
+    color: #9e9e9e;
 }
 
 table, th, td {
@@ -141,4 +181,52 @@ table, th, td {
     text-align: center;
     vertical-align: middle;
 }
-  
+
+.trEdit{
+    background-color: #333;
+}
+
+.remove-icon{
+    display: flex;
+    justify-content: flex-end;
+    margin: 0px 20px 16px 0;
+    font-size: 18px;
+}
+.remove-icon:hover{
+    cursor: pointer;
+    color: #c4c4c4;
+}
+
+.inputAdd{
+    display: flex;
+    text-align: center;
+    width: 100%;
+    height: 32px;
+    font-size: 16px;
+    border: none;
+    outline: none;
+    background-color: transparent;
+    color: #fff;
+}
+.inputAdd::placeholder {
+    color: white;
+}
+
+
+.save__box{
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    width: 100%;
+}
+.save__box span{
+    font-size: 14px;
+    color: rgb(243, 232, 31);
+    margin-right: 22px;
+}
+.save-btn{
+    font-size: 14px;
+    margin-top: 12px;
+    margin-right: 18px;
+    padding: 4px 0 2px;
+}
