--- a/navigation_css/card.css
+++ b/navigation_css/card.css
@@ -8,6 +8,76 @@
     color: #292727;
 
 }
+.container--id{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url('https://i.pinimg.com/originals/71/c6/b0/71c6b0e088a04dc7c4b2b4e34d96b5e5.jpg');
+  height: 700px;
+  width: 100%;
+}
+
+.id1 {
+  display:block ;
+  width: 690px;
+  height: 350px;
+  background-image: linear-gradient(163deg, #1d1f1e 0%, #59585c 100%);
+  border-radius: 20px;
+  transition: all .3s;
+ }
+ 
+ .id2 {
+  width: 690px;
+  height: 350px;
+  background-image: url('https://zshop.vn/blogs/wp-content/uploads/2022/08/ezgif.com-gif-maker-15-1.png');
+  border-radius:20px;
+  transition: all .2s;
+ }
+ 
+ .id2:hover {
+  transform: scale(0.98);
+  border-radius: 20px;
+ }
+
+ .id:hover {
+  box-shadow: 0px 0px 30px 1px rgba(0, 255, 117, 0.30);
+ }
+
+ .heading_id {
+  position: absolute;
+  letter-spacing: .2em;
+  font-size: 0.5em;
+  color: #fff;
+  transform: translate(2em, 3em);
+}
+.heading_logo{
+  position: absolute;
+  letter-spacing: .2em;
+  font-size: 1em;
+  color: #fff;
+  transform: translate(37rem, 0.8em);
+}
+.content-id{
+  position: absolute;
+  letter-spacing: .2em;
+  transform: translate(2em, 5em);
+}
+.top-id{
+  font-size: 40px;
+  font-family: 'Times New Roman';
+}
+.bot-id{
+  font-size: 25px;
+  font-family: Verdana;
+}
+.name-id{
+  position: absolute;
+  letter-spacing: .2em;
+  font-size: 1em;
+  color: #fff;
+  font-family: Courier New, monospace;
+  transform: translate(3em,19em);
+}
 .container--feature{
     margin-top: 30px;
     display: flex;
