--- a/navigation_css/promotion.css
+++ b/navigation_css/promotion.css
@@ -3,7 +3,7 @@
     padding: 0;
     list-style: none;
     text-decoration: none;
-    font-family: Overpass;
+    font-family: montserrat;
 }
 
 .container {
@@ -11,18 +11,21 @@
     background-size: cover;
     background-origin: content-box;
     background-position: 50% 0%;
-    background-repeat: repeat;
+    background-repeat: no-repeat;
     background-attachment: scroll;
 }
 
 /* ================================================================================================== ĐÂY LÀ PHẦN ĐẦU */
-
+.header{
+    background-color: rgb(190, 0, 0);
+}
 .header__inner {
     max-width: 1000px;
 }
 
 .header__inner__navigation span {
-    color: red;
+    color: rgb(255, 255, 255);
+    font-weight: 700;
 }
 
 .header__inner__try a {
@@ -47,13 +50,11 @@
 .container__colum1 {
     width: 50%;
     margin: 0 auto;
-    background-color: rgba(0, 85, 119, 0.082);
 }
 
 .container__colum2 {
     width: 50%;
     margin: 0 auto;
-    background-color: rgba(52, 0, 119, 0.034);
 }
 
 /* ======== ĐÂY LÀ PHẦN THÂN 1 */
@@ -64,25 +65,43 @@
 }
 
 .container__colum1__inner {
-    background-color: rgba(0, 42, 119, 0.075);
-    height: 20%;
+    height: 30%;
+    /* background-color: #00000025; */
 }
 
 .container__colum1__inner2 {
-    height: 80%;
-    background-color: rgba(146, 146, 146, 0.377);
+    height: 70%;
 }
 
 .container__colum2__inner {
-    background-color: rgba(112, 112, 112, 0.37);
+    /* background-color: #00000050; */
     height: 50%;
 }
 
+.container__colum2__inner__select{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* background-color: #1E90FF; */
+    width: 90%;
+    margin: 0 auto;
+}
+.image__inner{
+    display: flex;
+    justify-content: center;
+    width: 90%;
+    height: 430px;
+}
+.anh__ico{
+    margin-left: 40px;
+    scale: 1;
+}
 .container__colum2__inner2 {
     height: 50%;
-    background-color: rgba(255, 255, 255, 0.055);
 }
-
+.container__colum2__inner3 {
+    display: none;
+}
 /*======== ĐÂY LÀ PHẦN FOOTER */
 
 .footer {
@@ -378,7 +397,7 @@
     /* right: calc(100vw - 300px); */
     width: 250px;
     height: 100vh;
-    background-color: black;
+    background-color: #000;
     /* top: 165px; */
     /* top: 100%;
     right: 0;
@@ -391,7 +410,7 @@
     display: flex;
     align-items: center;
     position: relative;
-    top: 2px;
+    top: 0px;
 }
 .noidung__text1:hover{
     cursor: pointer;
@@ -401,7 +420,7 @@
     display: flex;
     align-items: center;
     height: 60px;
-    background-color: black;
+    background-color: #000;
     color: white;
     font-size: 14px;
     font-weight: 600;
@@ -430,13 +449,11 @@
 
 .noidung222 {
     display: none;
-    
-    background-color: #111;
 }
 
 .noidung222 a {
     padding-left: 49px;
-    background-color: #111;
+    background-color: black;
 }
 
 .noidung222 a:hover {
@@ -460,34 +477,32 @@
 
 /* ================================================================================================== ĐÂY LÀ PHẦN CONTAINER */
 .container__colum1__inner__select {
-    height: 100px;
+    position: relative;
     width: 90%;
     display: flex;
+    /* align-items: center; */
+    justify-content: center;
     margin: 0 auto;
 }
 
 .happy__newyear {
+    display: flex; 
+    /* align-items: center; */
+    height: 250px;
+}
+
+
+.happy__newyear img{
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 0 auto;
-    margin-top: 20px;
+    /* align-items: center; */
+    justify-content: center;
+    height: 120%;
 }
-
-.happy__newyear a {
-    color: white;
-    font-family: montserrat;
-    font-size: 100px;
-    font-weight: 900;
-    text-align: center;
-}
-
 .happy__newyear span {
     display: flex;
-    font-family: montserrat;
     font-size: 20px;
     color: white;
-    font-weight: 900;
+    font-weight: 700;
     background-color: goldenrod;
 }
 
@@ -516,7 +531,7 @@
 .text__box a {
     margin: 0 auto;
     position: relative;
-    font-family: montserrat;
+    font-size: 22px;
     font-weight: 600;
     color: black;
 
@@ -529,7 +544,7 @@
     flex-direction: column;
     margin: 0 auto;
     margin-top: 30px;
-    background-color: hsla(0, 0%, 0%, 0.2);
+    /* background-color: hsla(0, 0%, 0%, 0.2); */
     box-shadow: 2px 2px 30px 2px rgb(0, 0, 0, 0.4);
 
     border-radius: 5px;
@@ -635,11 +650,15 @@
         width: 100%;
         height: 860px;
     }
-
+    .container__colum2__inner {
+        display: none;
+    }
     .container__colum2__inner2 {
         height: auto;
     }
-
+    .container__colum2__inner3 {
+        display: flex;
+    }
     .footer,
     .footer__select {
         flex-direction: column;
